--- a/MVC_Bodega/src/views/ViewPrincipal.form
+++ b/MVC_Bodega/src/views/ViewPrincipal.form
@@ -36,7 +36,7 @@
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
               </AuxValues>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jmi_detalleVenta">
+            <MenuItem class="javax.swing.JMenuItem" name="jmi_detalleVentas">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Detalle de Venta"/>
               </Properties>
